// Vitest Snapshot v1

exports[`File Viewer - JSON > renders with invalid JSON 1`] = `
<DocumentFragment>
  <h3>
    Tree
  </h3>
  <hr />
  <p>
    JSON failed to parse
  </p>
  <pre>
    Unexpected token ; in JSON at position 4
  </pre>
  <h3>
    Raw
  </h3>
  <hr />
  <pre
    class="css-ffm88e"
  >
    1234;
  </pre>
</DocumentFragment>
`;

exports[`File Viewer - JSON > renders with valid JSON 1`] = `
<DocumentFragment>
  <h3>
    Tree
  </h3>
  <hr />
  <div
    class="json-container"
  >
    <div
      class="expand-prop-name"
    >
       Root  Property-
    </div>
    <div
      class="json-container"
    >
      <span
        class="prop-name"
      >
        Thing: 
      </span>
      1
    </div>
    <div
      class="json-container"
    >
      <span
        class="prop-name"
      >
        Name: 
      </span>
      string
    </div>
  </div>
  <h3>
    Raw
  </h3>
  <hr />
  <pre
    class="css-ffm88e"
  >
    {"thing":1,"name":"string"}
  </pre>
</DocumentFragment>
`;
